// Copyright (c) 2016 Urtashev Arslan. All rights reserved.
// Contacts: <urtashev@gmail.com>
//
// Permission is hereby granted, free of charge, to any person obtaining a copy of this software
// and associated documentation files (the "Software"), to deal in the Software without
// restriction, including without limitation the rights to use, copy, modify, merge, publish,
// distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the
// Software is furnished to do so, subject to the following conditions:
//
//   The above copyright notice and this permission notice shall be included in all copies or
//   substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING
// BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
// NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
// DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.

package geo_base.proto;

message geo_data_t {
    required uint64 magic = 1;
    required uint64 version = 2;
    optional uint64 points = 3;
    optional uint64 points_number = 4;
    optional uint64 edges = 5;
    optional uint64 edges_number = 6;
    optional uint64 edge_refs = 7;
    optional uint64 edge_refs_number = 8;
    optional uint64 parts = 9;
    optional uint64 parts_number = 10;
    optional uint64 polygons = 11;
    optional uint64 polygons_number = 12;
    optional uint64 polygon_refs = 13;
    optional uint64 polygon_refs_number = 14;
    optional uint64 boxes = 15;
    optional uint64 boxes_number = 16;
    optional uint64 blobs = 17;
    optional uint64 blobs_number = 18;
    optional uint64 kvs = 19;
    optional uint64 kvs_number = 20;
    optional uint64 regions = 21;
    optional uint64 regions_number = 22;
    optional uint64 raw_polygons_number = 23;
    optional uint64 raw_polygons = 24;
    optional uint64 raw_edge_refs_number = 25;
    optional uint64 raw_edge_refs = 26;
};
